fix layout issues with animation elements

--- a/caesar-algorithm/src/assets/base.css
+++ b/caesar-algorithm/src/assets/base.css
@@ -5,6 +5,7 @@
   --imperial-gold: #ffd700;
   --red: red;
   --royalblue: #4169e1;
+  --transparent: #dfddfd00;
 
   /* font-size */
   --text-font: 15px;
